Config Tailwing for production

--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Api SmartShop -Ecommerce</title>
-    <script src="https://cdn.tailwindcss.com"></script>
+    <link href="/output.css" rel="stylesheet">
 </head>
 <body class="bg-slate-100 flex justify-center items-center">
     <main class="bg-white border h-full w-[90%] sm:w-[80%] xl:w-[70%]">
